@@ -4,9 +4,9 @@ files[] = plupload.module
 core = 7.x
 package = Media
 
-; Information added by drupal.org packaging script on 2013-08-23
-version = "7.x-1.3"
+; Information added by drupal.org packaging script on 2013-10-09
+version = "7.x-1.4"
 core = "7.x"
 project = "plupload"
-datestamp = "1377254520"
+datestamp = "1381330640"
 
